--- a/packages/mondo-result-types/.gitignore
+++ b/packages/mondo-result-types/.gitignore
@@ -2,7 +2,6 @@
 !/.gitattributes
 !/.projen/tasks.json
 !/.projen/deps.json
-!/.github/workflows/stale.yml
 !/package.json
 !/LICENSE
 !/.npmignore
@@ -30,11 +29,11 @@ jspm_packages/
 .yarn-integrity
 .cache
 !/.projenrc.js
-!/.github/workflows/build.yml
-/dist/changelog.md
-/dist/version.txt
-!/.mergify.yml
-!/.github/workflows/upgrade.yml
-!/.github/pull_request_template.md
-!/lerna.json
-!/.github/workflows/release.yml
+!/test/
+!/tsconfig.json
+!/src/
+/lib
+/dist/
+!/.eslintrc.json
+!/tsconfig.eslint.json
+!/.mocharc.json
