--- a/packages/mondo-result-types/package.json
+++ b/packages/mondo-result-types/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mondo-result-types",
+  "name": "@mondopower/result-types",
   "description": "",
   "repository": {
     "type": "git",
@@ -41,6 +41,12 @@
     "typescript": "^4.4.3"
   },
   "bundledDependencies": [],
+  "keywords": [
+    "mondo",
+    "projen",
+    "result",
+    "typescript"
+  ],
   "main": "lib/index.js",
   "license": "Apache-2.0",
   "version": "0.0.0",
