Lerna Projen Updated

--- a/.projen/tasks.json
+++ b/.projen/tasks.json
@@ -206,6 +206,9 @@
       "steps": [
         {
           "exec": "node .projenrc.js"
+        },
+        {
+          "exec": "lerna run default --stream"
         }
       ]
     },
