--- a/packages/mondo-result-types/.projen/tasks.json
+++ b/packages/mondo-result-types/.projen/tasks.json
@@ -121,12 +121,7 @@
       ]
     },
     "default": {
-      "name": "default",
-      "steps": [
-        {
-          "exec": "node .projenrc.js"
-        }
-      ]
+      "name": "default"
     },
     "watch": {
       "name": "watch",
