--- a/packages/mondo-result-types/package.json
+++ b/packages/mondo-result-types/package.json
@@ -19,13 +19,14 @@
     "eslint": "npx projen eslint",
     "docgen": "npx projen docgen",
     "bump": "npx projen bump",
+    "unbump": "npx projen unbump",
     "projen": "npx projen"
   },
   "devDependencies": {
     "@types/babel__core": "^7.1.16",
     "@types/chai": "^4.2.21",
     "@types/mocha": "^9.0.0",
-    "@types/node": "^14.17.0",
+    "@types/node": "^14.17.17",
     "@typescript-eslint/eslint-plugin": "^4.31.1",
     "@typescript-eslint/parser": "^4.31.1",
     "chai": "^4.3.4",
@@ -38,7 +39,7 @@
     "npm-check-updates": "^11",
     "projen": "^0.28.4",
     "ts-eager": "^2.0.2",
-    "typedoc": "^0.21.4",
+    "typedoc": "^0.22.3",
     "typescript": "^4.4.3"
   },
   "bundledDependencies": [],
