--- a/package.json
+++ b/package.json
@@ -5,27 +5,30 @@
     "url": "https://github.com/MondoPower/mondo-common-libs.git"
   },
   "scripts": {
-    "clobber": "npx projen clobber",
-    "compile": "npx projen compile",
-    "test:compile": "npx projen test:compile",
-    "test": "npx projen test",
     "build": "npx projen build",
     "bump": "npx projen bump",
-    "unbump": "npx projen unbump",
+    "clobber": "npx projen clobber",
+    "compile": "npx projen compile",
+    "default": "npx projen default",
+    "package": "npx projen package",
+    "post-compile": "npx projen post-compile",
+    "pre-compile": "npx projen pre-compile",
     "publish:github": "npx projen publish:github",
     "publish:npm": "npx projen publish:npm",
-    "upgrade": "npx projen upgrade",
-    "upgrade-projen": "npx projen upgrade-projen",
-    "default": "npx projen default",
     "release": "npx projen release",
+    "test": "npx projen test",
+    "unbump": "npx projen unbump",
+    "upgrade": "npx projen upgrade",
     "projen": "npx projen"
   },
   "devDependencies": {
     "lerna": "^4.0.0",
-    "lerna-projen": "^0.0.18",
+    "lerna-projen": "0.0.41",
     "npm-check-updates": "^11",
-    "projen": "^0.28.4",
-    "standard-version": "^9"
+    "projen": "^0.33.2",
+    "standard-version": "^9",
+    "ts-eager": "^2.0.2",
+    "typescript": "^4.4.4"
   },
   "bundledDependencies": [],
   "main": "lib/index.js",
