--- a/packages/mondo-result-types/package.json
+++ b/packages/mondo-result-types/package.json
@@ -6,20 +6,21 @@
     "url": "https://github.com/MondoPower/mondo-common-libs.git"
   },
   "scripts": {
+    "build": "npx projen build",
+    "bump": "npx projen bump",
     "clobber": "npx projen clobber",
     "compile": "npx projen compile",
-    "test:compile": "npx projen test:compile",
+    "default": "npx projen default",
+    "docgen": "npx projen docgen",
+    "eslint": "npx projen eslint",
+    "package": "npx projen package",
+    "post-compile": "npx projen post-compile",
+    "pre-compile": "npx projen pre-compile",
     "test": "npx projen test",
-    "build": "npx projen build",
+    "unbump": "npx projen unbump",
     "upgrade": "npx projen upgrade",
     "upgrade-projen": "npx projen upgrade-projen",
-    "default": "npx projen default",
     "watch": "npx projen watch",
-    "package": "npx projen package",
-    "eslint": "npx projen eslint",
-    "docgen": "npx projen docgen",
-    "bump": "npx projen bump",
-    "unbump": "npx projen unbump",
     "projen": "npx projen"
   },
   "devDependencies": {
@@ -37,7 +38,7 @@
     "json-schema": "^0.3.0",
     "mocha": "^9.1.1",
     "npm-check-updates": "^11",
-    "projen": "^0.28.4",
+    "projen": "^0.33.2",
     "ts-eager": "^2.0.2",
     "typedoc": "^0.21.4",
     "typescript": "^4.4.3"
