--- a/package.json
+++ b/package.json
@@ -23,12 +23,12 @@
   },
   "devDependencies": {
     "lerna": "^4.0.0",
-    "lerna-projen": "0.0.43",
+    "lerna-projen": "0.0.46",
     "npm-check-updates": "^11",
-    "projen": "^0.33.8",
+    "projen": "^0.34.4",
     "standard-version": "^9",
-    "ts-eager": "^2.0.2",
-    "typescript": "^4.4.4"
+    "ts-node": "^10.4.0",
+    "typescript": "^4.5.2"
   },
   "bundledDependencies": [],
   "main": "lib/index.js",
