--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
   },
   "devDependencies": {
     "lerna": "^4.0.0",
-    "lerna-projen": "0.0.48",
+    "lerna-projen": "^0.0.51",
     "npm-check-updates": "^11",
-    "projen": "^0.35.1",
+    "projen": "^0.38.3",
     "standard-version": "^9",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.2"
