--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
   },
   "devDependencies": {
     "lerna": "^4.0.0",
-    "lerna-projen": "^0.0.51",
+    "lerna-projen": "0.0.52",
     "npm-check-updates": "^11",
-    "projen": "^0.38.3",
+    "projen": "^0.39.3",
     "standard-version": "^9",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.2"
