chore(update): major upgrade

--- a/.projen/tasks.json
+++ b/.projen/tasks.json
@@ -151,10 +151,10 @@
       ],
       "steps": [
         {
-          "exec": "errout=$(mktemp); gh release create $(cat dist/releasetag.txt) -R $GITHUB_REPOSITORY -F dist/changelog.md -t $(cat dist/releasetag.txt) --target $GITHUB_REF 2> $errout && true; exitcode=$?; if [ $exitcode -ne 0 ] && ! grep -q \"Release.tag_name already exists\" $errout; then cat $errout; exit $exitcode; fi"
+          "exec": "test \"$(git branch --show-current)\" = \"main\""
         },
         {
-          "exec": "lerna run publish:github --stream"
+          "exec": "errout=$(mktemp); gh release create $(cat dist/releasetag.txt) -R $GITHUB_REPOSITORY -F dist/changelog.md -t $(cat dist/releasetag.txt) --target $GITHUB_REF 2> $errout && true; exitcode=$?; if [ $exitcode -ne 0 ] && ! grep -q \"Release.tag_name already exists\" $errout; then cat $errout; exit $exitcode; fi"
         }
       ]
     },
@@ -170,10 +170,10 @@
       ],
       "steps": [
         {
-          "exec": "npx -p jsii-release@latest jsii-release-npm"
+          "exec": "test \"$(git branch --show-current)\" = \"main\""
         },
         {
-          "exec": "lerna run publish:npm --stream"
+          "exec": "npx -p jsii-release@latest jsii-release-npm"
         }
       ]
     },
