--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   },
   "devDependencies": {
     "lerna": "^4.0.0",
-    "lerna-projen": "0.0.55",
+    "lerna-projen": "^0.0.55",
     "npm-check-updates": "^12",
     "projen": "^0.43.2",
     "standard-version": "^9",
