--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
   },
   "devDependencies": {
     "lerna": "^4.0.0",
-    "lerna-projen": "^0.0.56",
+    "lerna-projen": "0.0.57",
     "npm-check-updates": "^12",
-    "projen": "^0.44.0",
+    "projen": "^0.45.3",
     "standard-version": "^9",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.4"
