--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "clobber": "npx projen clobber",
     "compile": "npx projen compile",
     "default": "npx projen default",
+    "eject": "npx projen eject",
     "package": "npx projen package",
     "post-compile": "npx projen post-compile",
+    "post-upgrade": "npx projen post-upgrade",
     "pre-compile": "npx projen pre-compile",
     "publish:github": "npx projen publish:github",
     "publish:npm": "npx projen publish:npm",
@@ -23,14 +25,13 @@
   },
   "devDependencies": {
     "lerna": "^4.0.0",
-    "lerna-projen": "^0.0.57",
+    "lerna-projen": "0.0.68",
     "npm-check-updates": "^12",
-    "projen": "^0.45.3",
+    "projen": "^0.52.4",
     "standard-version": "^9",
     "ts-node": "^10.4.0",
-    "typescript": "^4.5.4"
+    "typescript": "^4.5.5"
   },
-  "bundledDependencies": [],
   "main": "lib/index.js",
   "license": "Apache-2.0",
   "version": "0.0.0",
