--- a/packages/mondo-result-types/package.json
+++ b/packages/mondo-result-types/package.json
@@ -12,9 +12,11 @@
     "compile": "npx projen compile",
     "default": "npx projen default",
     "docgen": "npx projen docgen",
+    "eject": "npx projen eject",
     "eslint": "npx projen eslint",
     "package": "npx projen package",
     "post-compile": "npx projen post-compile",
+    "post-upgrade": "npx projen post-upgrade",
     "pre-compile": "npx projen pre-compile",
     "test": "npx projen test",
     "unbump": "npx projen unbump",
@@ -23,26 +25,25 @@
     "projen": "npx projen"
   },
   "devDependencies": {
-    "@types/babel__core": "^7.1.17",
+    "@types/babel__core": "^7.1.18",
     "@types/chai": "^4.3.0",
-    "@types/mocha": "^9.0.0",
+    "@types/mocha": "^9.1.0",
     "@types/node": "^12",
     "@typescript-eslint/eslint-plugin": "^5",
     "@typescript-eslint/parser": "^5",
-    "chai": "^4.3.4",
+    "chai": "^4.3.6",
     "eslint": "^8",
     "eslint-import-resolver-node": "^0.3.6",
     "eslint-import-resolver-typescript": "^2.5.0",
-    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-import": "^2.25.4",
     "json-schema": "^0.4.0",
-    "mocha": "^9.1.3",
+    "mocha": "^9.2.0",
     "npm-check-updates": "^12",
-    "projen": "^0.45.3",
+    "projen": "^0.52.4",
     "ts-eager": "^2.0.2",
     "typedoc": "^0.21.4",
-    "typescript": "^4.5.4"
+    "typescript": "^4.5.5"
   },
-  "bundledDependencies": [],
   "keywords": [
     "mondo",
     "projen",
