Added node version

--- a/.gitignore
+++ b/.gitignore
@@ -38,5 +38,6 @@ jspm_packages/
 !/.github/workflows/release.yml
 !/.mergify.yml
 !/.github/pull_request_template.md
+!/.nvmrc
 !/lerna.json
 !/.github/workflows/upgrade-main.yml
