--- a/.projen/tasks.json
+++ b/.projen/tasks.json
@@ -203,7 +203,7 @@
           "exec": "test \"$(git branch --show-current)\" = \"main\""
         },
         {
-          "exec": "npx -p jsii-release@latest jsii-release-npm"
+          "exec": "npx -p publib@latest publib-npm"
         }
       ]
     },
@@ -294,6 +294,9 @@
         },
         {
           "spawn": "post-upgrade"
+        },
+        {
+          "exec": "lerna run upgrade --stream --since $(git describe --abbrev=0 --tags --match \"v*\")"
         }
       ]
     }
