--- a/packages/mondo-result-types/.projen/tasks.json
+++ b/packages/mondo-result-types/.projen/tasks.json
@@ -174,6 +174,9 @@
       },
       "steps": [
         {
+          "exec": "npm update npm-check-updates"
+        },
+        {
           "exec": "npm-check-updates --dep dev --upgrade --target=minor"
         },
         {
