--- a/.gitattributes
+++ b/.gitattributes
@@ -17,6 +17,8 @@
 /.projen/deps.json linguist-generated
 /.projen/files.json linguist-generated
 /.projen/tasks.json linguist-generated
+/docs/index.html linguist-generated
+/docs/index.md linguist-generated
 /lerna.json linguist-generated
 /LICENSE linguist-generated
 /package-lock.json linguist-generated
