--- a/package.json
+++ b/package.json
@@ -24,12 +24,12 @@
     "projen": "npx projen"
   },
   "devDependencies": {
-    "lerna": "^4.0.0",
-    "lerna-projen": "0.0.182",
-    "npm-check-updates": "^12",
-    "projen": "^0.58.27",
+    "lerna": "5",
+    "lerna-projen": "0.0.192",
+    "npm-check-updates": "^15",
+    "projen": "^0.59.4",
     "standard-version": "^9",
-    "ts-node": "^10.8.2",
+    "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
   },
   "main": "lib/index.js",
