Added jest instead of mocha

--- a/packages/mondo-fetch/.gitignore
+++ b/packages/mondo-fetch/.gitignore
@@ -30,6 +30,9 @@ jspm_packages/
 .yarn-integrity
 .cache
 !/.projenrc.js
+/test-reports/
+junit.xml
+/coverage/
 !/test/
 !/tsconfig.json
 !/tsconfig.dev.json
@@ -37,4 +40,3 @@ jspm_packages/
 /lib
 /dist/
 !/.eslintrc.json
-!/.mocharc.json
