--- a/packages/mondo-fetch/.gitattributes
+++ b/packages/mondo-fetch/.gitattributes
@@ -3,6 +3,7 @@
 /.eslintrc.json linguist-generated
 /.gitattributes linguist-generated
 /.gitignore linguist-generated
+/.mocharc.json linguist-generated
 /.npmignore linguist-generated
 /.projen/** linguist-generated
 /.projen/deps.json linguist-generated
