--- a/packages/mondo-fetch/.gitignore
+++ b/packages/mondo-fetch/.gitignore
@@ -30,9 +30,6 @@ jspm_packages/
 .yarn-integrity
 .cache
 !/.projenrc.js
-/test-reports/
-junit.xml
-/coverage/
 !/test/
 !/tsconfig.json
 !/tsconfig.dev.json
@@ -40,3 +37,4 @@ junit.xml
 /lib
 /dist/
 !/.eslintrc.json
+!/.mocharc.json
