--- a/package.json
+++ b/package.json
@@ -24,10 +24,11 @@
     "projen": "npx projen"
   },
   "devDependencies": {
+    "@mondo/projen-projects": "^2.112.6",
     "constructs": "^10.0.0",
     "lerna": "5",
-    "lerna-projen": "0.1.312",
-    "projen": "^0.77.6",
+    "lerna-projen": "0.1.336",
+    "projen": "^0.79.3",
     "standard-version": "^9",
     "ts-node": "^10.9.2",
     "typescript": "^4.9.5"
