--- a/packages/mondo-fetch/.projen/tasks.json
+++ b/packages/mondo-fetch/.projen/tasks.json
@@ -65,7 +65,8 @@
       "description": "Runs eslint against the codebase",
       "steps": [
         {
-          "exec": "eslint --ext .ts,.tsx --fix --no-error-on-unmatched-pattern src test build-tools"
+          "exec": "eslint --ext .ts,.tsx --fix --no-error-on-unmatched-pattern $@ src test build-tools",
+          "receiveArgs": true
         }
       ]
     },
@@ -152,13 +153,13 @@
       },
       "steps": [
         {
-          "exec": "npx npm-check-updates@16 --upgrade --target=minor --peer --dep=dev,peer,prod,optional --filter=@types/node,@typescript-eslint/eslint-plugin,@typescript-eslint/parser,constructs,eslint-import-resolver-typescript,eslint-plugin-import,eslint,jest-fetch-mock,projen,typedoc,typescript,@mondopower/result-types"
+          "exec": "npx npm-check-updates@16 --upgrade --target=minor --peer --dep=dev,peer,prod,optional --filter=@mondo/projen-projects,@types/mocha,@types/node,@typescript-eslint/eslint-plugin,@typescript-eslint/parser,chai,chai-as-promised,constructs,eslint-import-resolver-typescript,eslint-plugin-check-file,eslint-plugin-import,eslint-plugin-no-only-tests,eslint,projen,sinon,sinon-chai,typedoc,typescript,@mondopower/result-types"
         },
         {
           "exec": "npm install"
         },
         {
-          "exec": "npm update @types/node @typescript-eslint/eslint-plugin @typescript-eslint/parser constructs eslint-import-resolver-typescript eslint-plugin-import eslint jest-fetch-mock projen typedoc typescript @mondopower/result-types"
+          "exec": "npm update @mondo/projen-projects @types/mocha @types/node @typescript-eslint/eslint-plugin @typescript-eslint/parser chai chai-as-promised constructs eslint-import-resolver-typescript eslint-plugin-check-file eslint-plugin-import eslint-plugin-no-only-tests eslint projen sinon sinon-chai typedoc typescript @mondopower/result-types"
         },
         {
           "exec": "npx projen"
