--- a/packages/mondo-fetch/package.json
+++ b/packages/mondo-fetch/package.json
@@ -29,12 +29,10 @@
   },
   "devDependencies": {
     "@mondo/projen-projects": "^2",
-    "@types/mocha": "^10.0.6",
+    "@types/jest": "^29.5.11",
     "@types/node": "^18",
     "@typescript-eslint/eslint-plugin": "^6",
     "@typescript-eslint/parser": "^6",
-    "chai": "^4.4.1",
-    "chai-as-promised": "^7.1.1",
     "constructs": "^10.0.0",
     "eslint": "^8",
     "eslint-import-resolver-typescript": "^2.7.1",
@@ -42,8 +40,6 @@
     "eslint-plugin-import": "^2.29.0",
     "eslint-plugin-no-only-tests": "^3.1.0",
     "projen": "^0.79.3",
-    "sinon": "^17.0.1",
-    "sinon-chai": "^3.7.0",
     "typedoc": "^0.25.4",
     "typescript": "^4.9.5"
   },
