--- a/packages/mondo-fetch/.gitignore
+++ b/packages/mondo-fetch/.gitignore
@@ -29,6 +29,9 @@ jspm_packages/
 *.tgz
 .yarn-integrity
 .cache
+/test-reports/
+junit.xml
+/coverage/
 !/test/
 !/tsconfig.json
 !/tsconfig.dev.json
