--- a/.gitattributes
+++ b/.gitattributes
@@ -12,6 +12,7 @@
 /.gitignore linguist-generated
 /.mergify.yml linguist-generated
 /.npmignore linguist-generated
+/.npmrc linguist-generated
 /.nvmrc linguist-generated
 /.projen/** linguist-generated
 /.projen/deps.json linguist-generated
@@ -23,5 +24,5 @@
 /docs/README.md linguist-generated
 /lerna.json linguist-generated
 /LICENSE linguist-generated
-/package-lock.json linguist-generated
 /package.json linguist-generated
+/pnpm-lock.yaml linguist-generated
