--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,7 @@ jspm_packages/
 !/.mergify.yml
 !/.github/workflows/upgrade-main.yml
 !/.github/pull_request_template.md
+!/.npmrc
 !/.nvmrc
 !/.github/workflows/auto-merge.yml
 !/lerna.json
