--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "ts-node": "^10.9.2",
     "typescript": "^4.9.5"
   },
+  "pnpm": {},
   "main": "lib/index.js",
   "license": "Apache-2.0",
   "version": "0.0.0",
