--- a/.projen/tasks.json
+++ b/.projen/tasks.json
@@ -293,7 +293,7 @@
       },
       "steps": [
         {
-          "exec": "pnpx npm-check-updates@16 --upgrade --target=minor --peer --dep=dev,peer,prod,optional --filter=@mondo/projen-projects,constructs,lerna,lerna-projen,projen,standard-version,ts-node,typescript"
+          "exec": "pnpm dlx npm-check-updates@16 --upgrade --target=minor --peer --dep=dev,peer,prod,optional --filter=@mondo/projen-projects,lerna,lerna-projen,projen,ts-node,typescript"
         },
         {
           "exec": "pnpm i --no-frozen-lockfile"
