--- a/package.json
+++ b/package.json
@@ -24,11 +24,11 @@
     "projen": "npx projen"
   },
   "devDependencies": {
-    "@mondo/projen-projects": "^2.112.6",
+    "@mondo/projen-projects": "^2.119.1",
     "constructs": "^10.0.0",
-    "lerna": "5",
-    "lerna-projen": "0.1.336",
-    "projen": "^0.79.3",
+    "lerna": "^5.6.2",
+    "lerna-projen": "0.1.343",
+    "projen": "^0.79.21",
     "standard-version": "^9",
     "ts-node": "^10.9.2",
     "typescript": "^4.9.5"
