--- a/packages/mondo-fetch/package.json
+++ b/packages/mondo-fetch/package.json
@@ -30,7 +30,7 @@
   },
   "devDependencies": {
     "@mondo/projen-projects": "^2",
-    "@types/jest": "^29.5.11",
+    "@types/jest": "^29.5.12",
     "@types/node": "^18",
     "@typescript-eslint/eslint-plugin": "^6",
     "@typescript-eslint/parser": "^6",
@@ -38,16 +38,17 @@
     "eslint": "^8",
     "eslint-import-resolver-typescript": "^2.7.1",
     "eslint-plugin-check-file": "^2.6.2",
-    "eslint-plugin-import": "^2.29.0",
+    "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-no-only-tests": "^3.1.0",
     "jest": "^29.7.0",
     "jest-junit": "^15",
-    "projen": "^0.79.3",
-    "typedoc": "^0.25.4",
+    "projen": "^0.79.21",
+    "ts-jest": "^29.1.2",
+    "typedoc": "^0.25.8",
     "typescript": "^4.9.5"
   },
   "dependencies": {
-    "@mondopower/result-types": "^1.1.470"
+    "@mondopower/result-types": "^1.1.517"
   },
   "keywords": [
     "fetch",
