--- a/package.json
+++ b/package.json
@@ -24,10 +24,10 @@
     "projen": "npx projen"
   },
   "devDependencies": {
-    "@mondo/projen-projects": "^2.119.1",
+    "@mondo/projen-projects": "^2.124.5",
     "constructs": "^10.0.0",
-    "lerna": "5",
-    "lerna-projen": "0.1.366",
+    "lerna": "^5.6.2",
+    "lerna-projen": "0.1.367",
     "projen": "^0.80.11",
     "standard-version": "^9",
     "ts-node": "^10.9.2",
