--- a/packages/mondo-fetch/package.json
+++ b/packages/mondo-fetch/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mondopower-fetch",
+  "name": "@mondo/mondopower-fetch",
   "description": "Library to use to wrap node fetch",
   "repository": {
     "type": "git",
@@ -37,18 +37,18 @@
     "constructs": "^10.0.0",
     "eslint": "^8",
     "eslint-import-resolver-typescript": "^2.7.1",
-    "eslint-plugin-check-file": "^2.6.2",
+    "eslint-plugin-check-file": "^2.7.1",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-no-only-tests": "^3.1.0",
     "jest": "^29.7.0",
     "jest-junit": "^15",
-    "projen": "^0.79.21",
+    "projen": "^0.80.11",
     "ts-jest": "^29.1.2",
-    "typedoc": "^0.25.8",
+    "typedoc": "^0.25.12",
     "typescript": "^4.9.5"
   },
   "dependencies": {
-    "@mondopower/result-types": "^1.1.517"
+    "@mondopower/result-types": "^1.1.521"
   },
   "keywords": [
     "fetch",
@@ -58,6 +58,9 @@
   ],
   "main": "lib/index.js",
   "license": "Apache-2.0",
+  "publishConfig": {
+    "access": "public"
+  },
   "version": "0.0.0",
   "jest": {
     "testMatch": [
